<resources>
    <string name="app_name">Sound Meter - Noise dB Meter</string>
	<!-- MainActivity.java -->
	<string name="activity_infobull">This is a custom message box</string>
	<string name="activity_infotitle">About Sound Meter</string>
	<string name="activity_infobutton">Close</string>
	<string name="activity_recStartErr">Unable to start recording</string>
	<string name="activity_recBusyErr">Recorder is busy or permission to record is prohibited</string>
	<string name="activity_recFileErr">Can not create file</string>
	<!-- activity_main.xml -->
	<string name="activity_minlabel">Minimum</string>
	<string name="activity_avglabel">Average</string>
	<string name="activity_maxlabel">Maximum</string>
	<string name="activity_curlabel">Real Time</string>
	<!-- dialog_info.xml -->
	<string name="info_0db">0dB : Most people just hear a low noise.</string>
	<string name="info_30db">30dB～40dB it\'s the ideal calm.</string>
	<string name="info_50db">50dB and more: affects rest and sleep.</string>
	<string name="info_70db">70dB and more: can affect learning and work.</string>
	<string name="info_90db">90dB and more affect audition.</string>
	<string name="info_150db">150dB : A sudden exposure to a sound environment of 150dB, will break the eardrums. The audition will be completely lost.</string>

	<string name="get_chat_sticker" translatable="false">Get Amazing chat Stickers for WhatsApp</string>
	<string name="get_chat_sticker_desc" translatable="false">We have very Nice Stickers</string>
	<string name="mrec" translatable="false">d30e9332da4dbc47</string>
    <string name="soundinfo" translatable="false">This is a Great Sound App For You. The Sound Meter Has All Feature of Professional Sound Meter
	, Display Sound Graph and Switch Theme. You Can Now Measure Sound Level With Your Smartphone</string>
</resources>
