<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:clickable="true"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:padding="20.0dip">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardElevation="10dp"
        app:cardCornerRadius="6dp"
        android:elevation="6dp">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical" >

        <np.TextView
            android:id="@+id/title"

            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="sfasfasf"
            android:layout_marginTop="10dp"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:visibility="visible" />

        <LinearLayout
            android:id="@+id/content"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="10dp"
            android:gravity="center|right" >

            <np.TextView
                android:id="@+id/message"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left|center"
                android:lineSpacingMultiplier="1.5"
                android:padding="5dp"
                android:text="@string/info_0db"
                android:textColor="@color/black" />

            <np.TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left|center"
                android:textColor="@color/black"
                android:lineSpacingMultiplier="1.5"
                android:padding="5dp"
                android:text="@string/info_30db" />
            <np.TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left|center"
                android:textColor="@color/black"
                android:lineSpacingMultiplier="1.5"
                android:padding="5dp"
                android:text="@string/info_50db" />
            <np.TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left|center"
                android:textColor="@color/black"
                android:lineSpacingMultiplier="1.5"
                android:padding="5dp"
                android:text="@string/info_70db" />
            <np.TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left|center"
                android:textColor="@color/black"
                android:lineSpacingMultiplier="1.5"
                android:padding="5dp"
                android:text="@string/info_90db" />
            <np.TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left|center"
                android:textColor="@color/black"
                android:lineSpacingMultiplier="1.5"
                android:padding="5dp"
                android:text="@string/info_150db" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="60.0dip"
            android:layout_gravity="bottom"
            android:gravity="center"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal" >

            <np.Button
                android:id="@+id/negativeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/close"
                android:gravity="center"
                android:text="Close"
                android:textAllCaps="false"
                android:textColor="#fff" />
        </LinearLayout>
    </LinearLayout>
    </androidx.cardview.widget.CardView>

</FrameLayout>
