<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_page"
    android:id="@+id/changeBackgroud"
    android:orientation="vertical"
    tools:context="com.digitalappsacademy.soundmeter.MainActivity">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/colorPrimary">
        <ImageView
            android:id="@+id/menu"
            android:layout_width="25dp"
            android:layout_height="20dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/ic_menu" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="Sound Meter"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="3">


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                >

                <com.digitalappsacademy.soundmeter.Speedometer
                    android:id="@+id/speed"
                    android:layout_width="280dp"
                    android:layout_height="280dp"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/noise_disc" />


            </FrameLayout>


            <androidx.cardview.widget.CardView
                android:id="@+id/changeLinear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:elevation="10dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal"
                    android:padding="10dp"

                    android:visibility="visible">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <np.TextView
                            android:id="@+id/minlabel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/activity_minlabel"
                            android:textStyle="bold"
                            android:textColor="@color/black" />

                        <TextView
                            android:id="@+id/minval"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="23 Db"
                            android:textColor="@color/grey"
                            android:textSize="24dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <np.TextView
                            android:id="@+id/avglabel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/activity_avglabel"
                            android:textStyle="bold"
                            android:textColor="@color/black" />

                        <TextView
                            android:id="@+id/mmval"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="23 Db"
                            android:textColor="@color/grey"
                            android:textSize="24dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <np.TextView
                            android:id="@+id/maxlabel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/activity_maxlabel"
                            android:textStyle="bold"
                            android:textColor="@color/black"
                           />

                        <TextView
                            android:id="@+id/maxval"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="23 Db"
                            android:textColor="@color/grey"
                            android:textSize="24dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <np.TextView
                            android:id="@+id/curlabel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/activity_curlabel"
                            android:textStyle="bold"
                            android:textColor="@color/black" />

                        <TextView
                            android:id="@+id/curval"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="23 Db"
                            android:textColor="@color/grey"
                            android:textSize="24dp" />
                    </LinearLayout>
                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <FrameLayout
                android:id="@+id/mrec"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp" />

            <LinearLayout
                android:id="@+id/chartcontainer"
                android:layout_width="match_parent"
                android:layout_height="228dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp">

                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/chart1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="16dp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
